--- a/Test.html
+++ b/Test.html
@@ -7,8 +7,54 @@
 
 </head>
 <body>
+<svg viewBox="0 0 500 900">
+<text x="220" y="20">
+<tspan x="220" dy="30">This is multi-line</tspan>
+<tspan x="220" dy="30">text or text</tspan>
+<tspan x="220" dy="30" style="fill:white;stroke:green">with different properties</tspan>
+<tspan x="20" dy="30" rotate="10 20 30 40 0 50 60 70 0 80 90 0 100 110 120 140 150 160 170
+180">
+that can be produced</tspan>
+<tspan x="220" dy="30">using the tspan element</tspan>
+</text>
+<path id="duck" d="M 0 312 C 40 360 120 280 160 306 C 160 306 165 310 170 303
+C 180 200 220 220 260 261 C 260 261 280 273 290 268 C 288 280 272 285 250 285
+C 195 283 210 310 230 320 C 260 340 265 385 200 391 C 150 395 30 395 0 312 Z"/>
+<text style="font-size:10">
+<textPath xlink:href="#duck">
+We go up, then we go down, then up again around his head. Now we are upside down as we
+go round his neck and along the bottom to the tail.
+</textPath>
+</text>
+<text>
+<tspan x="30" dy="30" font-size="16">This </tspan>
+<tspan x="330" dy="30" fill="red">is </tspan>
+<tspan x="530" dy="30" font-weight="normal">a </tspan>
+<tspan x="130" dy="30" font-family="Courier" font-size="28">single </tspan>
+<tspan x="330" dy="30" fill="green">text </tspan>
+<tspan x="30" dy="60" font-style="italic">string </tspan>
+<tspan x="430" dy="30" font-size="18">that </tspan>
+<tspan x="330" dy="30" font-size="20">has </tspan>
+<tspan x="230" dy="30" font-size="24">been </tspan>
+<tspan x="130" dy="30" font-size="28">distributed <</tspan>
+<tspan dx="30" dy="30">across </tspan>
+<tspan dx="130" dy="30">the </tspan>
+<tspan dx="-230" dy="30">canvas</tspan>
+</text>
 
-<script>
+<circle cx="70" cy="100" r="50" />
+<rect x="150" y="50" rx="20" ry="20" width="135" height="100" />
+<line x1="325" y1="150" x2="375" y2="50" />
+<polyline points="50, 250 75, 350 100, 250 125, 350 150, 250 175, 350" />
+<polygon points=" 250, 250 297, 284 279, 340 220, 340 202, 284" />
+<ellipse cx="400" cy="300" rx="72" ry="50" />
+<rect x="20" y="10" width="120" height="40" >
+<animate attributeName="width" from="120" to="40" begin="0s" dur="8s" fill="freeze" />
+<animate attributeName="height" from="40" to="82" begin="6s" dur="7s" fill="freeze" />
+</rect>
+</svg>
+
+<!-- <script>
 // canvas vars
 var canvas=document.createElement("canvas");
 document.body.appendChild(canvas);
@@ -52,6 +98,6 @@ function animate(time){
 	// request another animation loop
 	requestAnimationFrame(animate);
 }
-</script>
+</script> -->
 </body>
 </html>
