--- a/DragAndDrop.html
+++ b/DragAndDrop.html
@@ -9,6 +9,7 @@
 	 height: 300px;
 	 margin: 10px;
 	 border: 1px solid #999999;
+	 cursor: pointer;
 	}
 
 	#btnLoadFiles{
@@ -28,7 +29,7 @@
 		<tr>
 			<td>#</td>
 			<td>nombre</td>
-			<td>peso</td>
+			<td>peso KB</td>
 			<td>tipo</td>
 		</tr>
 		<tbody id="tableTBodyFiles">
@@ -38,6 +39,12 @@
 </div>
 
 <script>
+
+var selectedFiles = [];
+
+function byteToKilobyte(numBytes) {
+	return parseFloat((numBytes / 1024).toFixed(2)).toLocaleString('en-US');
+}
 
 function iterateFiles(filesArray)
 {
@@ -55,53 +62,43 @@ function listarFiles(){
 	if(selectedFiles.length > 0){
 		tBody.innerHTML = ''; // limpia la tabla
 		for (let i = 0; i < selectedFiles.length; i++) {
-			tBody.innerHTML += '<td>'+(i + 1)+'</td>' + '<td>'+selectedFiles[i].name+'</td>' + '<td>'+selectedFiles[i].size+'</td>' + '<td>'+selectedFiles[i].type+'</td>';
+			tBody.innerHTML += '<tr><td>'+(i + 1)+'</td>' + '<td>'+selectedFiles[i].name+'</td>' + '<td>'+ byteToKilobyte(selectedFiles[i].size)+'</td>' + '<td>'+selectedFiles[i].type+'</td></tr>';
 		}
 	}
 }
 
-var selectedFiles = [];
 function inicializar(){
 	let filesDragZone = document.getElementById('filesDragZone');
-	let btnLoadFiles = document.getElementById('btnLoadFiles');
 	filesDragZone.addEventListener('click', function(e){ btnLoadFilesClickEvent(); }, false);
+	filesDragZone.addEventListener('dragenter', function(e) {e.preventDefault(); }, false);
+	filesDragZone.addEventListener('dragover', function(e){ e.preventDefault(); }, false);
+	filesDragZone.addEventListener('drop', filesDragZoneDropEvent, false);
+
+	let btnLoadFiles = document.getElementById('btnLoadFiles');
 	btnLoadFiles.addEventListener('change', function(){ btnLoadFilesChangeEvent(this); }, false);
-	//soltar.addEventListener('dragenter', function(e){
-	//e.preventDefault(); }, false);
-	//soltar.addEventListener('dragover', function(e){
-	//e.preventDefault(); }, false);
-	//soltar.addEventListener('drop', soltado, false);
 }
 
 function btnLoadFilesClickEvent(){
 	let btnLoadFiles = document.getElementById('btnLoadFiles');
 	btnLoadFiles.click();
-	//soltar.addEventListener('dragenter', function(e){
-	//e.preventDefault(); }, false);
-	//soltar.addEventListener('dragover', function(e){
-	//e.preventDefault(); }, false);
-	//soltar.addEventListener('drop', soltado, false);
 }
 
 function btnLoadFilesChangeEvent(e){
 	let files = [];
 	files.push(e.files);
 	iterateFiles(files);
-	console.log(selectedFiles);
 	listarFiles();
 }
 
-function soltado(e){
+function filesDragZoneDropEvent(e){
 	e.preventDefault();
-	var archivos=e.dataTransfer.files;
-	selectedFiles = e.dataTransfer.files;
-	var lista='';
-	for(var f=0;f<archivos.length;f++){
-		lista+='Archivo: '+archivos[f].name+' '+archivos[f].size+'<br>';
-		console.log(archivos[f]);
+	let files = e.dataTransfer.files;
+	for (let i = 0; i < files.length; i++) {
+		selectedFiles.push(files[i]);
 	}
-	soltar.innerHTML=lista;
+	listarFiles();
 }
+
 window.addEventListener('load', inicializar, false);
 </script>
 </body>
